# CSGReaperWwisePlugin

./: .gitignore  CMakeLists.txt  CSGReaperWwisePlugin.sln  CSGReaperWwisePlugin.vcxproj  CSGReaperWwisePlugin.vcxproj.filters  TODO.txt  csg_reaper_wwise_x64.exp  csg_reaper_wwise_x64.lib  gui_Transfer.cpp  index.md  reaper_wwise_csg_x64.exp  reaper_wwise_csg_x64.lib  x_reaper_wwise_csg_x64.exp
Intermidiate/CSGReape.a6ede66c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CSGReaperWwisePlugin.lastbuildstate  CSGReaperWwisePlugin.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
docs/pages/: configsetup.md  createhelp.md  transferhelp.md
images/: cog.cpp  cog.h
include/: ConfigFileHandler.h  EDL_Conformer.h  GUI.h  RapidJsonUtils.h  ReaperRenderQueParser.h  Reaper_ExtState_Helper.h  RegionMetadata.h  RegionMetadataHelper.h  WaapiConnect.h  WaapiFunctions.h  WwiseConnectionHandler.h  gui_ExtState.h  gui_RegionMetadata.h  gui_RenderTree.h  gui_Templates.h  gui_Transfer.h  gui_create.h  gui_properties.h  gui_reconformer.h  gui_settings.h  image_helper.h  platformhelpers.h  reaperHelpers.h  reaper_plugin.h  settings_structs.h  versioning.h  waapi_structs.h  wav_helper.h  workunithelper.h
include/JUCE/: AppConfig.h  JuceHeader.h
include/WDL/: heapbuf.h  ptrlist.h
include/WDL/swell/: swell-internal.h
libs/wav-riff-master/include/: WavData.hpp
libs/wav-riff-master/src/: WavData.cpp
reaper_wwise_csg.xcodeproj/: project.pbxproj
reaper_wwise_csg.xcodeproj/project.xcworkspace/xcshareddata/: reaper_SamplerExtension.xcscmblueprint
reaper_wwise_csg.xcodeproj/project.xcworkspace/xcuserdata/simongumbleton.xcuserdatad/: WorkspaceSettings.xcsettings
reaper_wwise_csg.xcodeproj/xcshareddata/xcschemes/: Debug.xcscheme  Release.xcscheme
scripts/: Build_Mac_Release.command  Build_Win_Release.bat  MacCopyBuildFromReaper.command  WinCopyBuildFromReaper.bat
src/: ConfigFileHandler.cpp  CreateImportWindow.cpp  EDL_Conformer.cpp  Main.cpp  ReaperRenderQueParser.cpp  Reaper_ExtState_Helper.cpp  RegionMetadata.cpp  RegionMetadataHelper.cpp  WaapiConnect.cpp  WaapiFunctions.cpp  WwiseConnectionHandler.cpp  gui_RegionMetadata.cpp  gui_Templates.cpp  gui_Transfer.cpp  gui_assembler.cpp  gui_create.cpp  gui_reconformer.cpp  gui_settings.cpp  platformhelpers.cpp  wav_helper.cpp  workunithelper.cpp
